<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.permissions.NotificationPermissionActivity"
    android:padding="24dp">


    <ImageView
        android:id="@+id/imageViewIcon"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:src="@drawable/ic_notifications_active"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/textViewPermissionTitle"
        app:layout_constraintVertical_chainStyle="packed"
        android:layout_marginTop="64dp"
        app:tint="?attr/colorPrimary" />


    <TextView
        android:id="@+id/textViewPermissionTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/notification_access_required"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
        android:textAlignment="center"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toBottomOf="@id/imageViewIcon"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/textViewPermissionDescription"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/notification_permission_description"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
        android:textAlignment="center"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/textViewPermissionTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintWidth_max="320dp"
        />

    <Button
        android:id="@+id/buttonGrantPermission"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/grant_permission"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="32dp"/>


</androidx.constraintlayout.widget.ConstraintLayout>
